src/styles/panel.scss
.cli {
	max-height: 64%;

	&-panel {
		height: 0;
		position: absolute;
		top: 0;
		left: 0;
		right: 0;
		color: white;
		font: 16px monospace;
		background: rgba(0, 0, 0, 0.8);
		line-height: 20px;
		transition: height 0.64s linear;
	}

	&-panel.show {
		height: 64%;
	}

	&-history {
		overflow: auto;
		white-space: pre-wrap;
		position: absolute;
		bottom: 20px;

		.cli-prompt {
			display: inline;
			width: auto;
		}
	}

	&-line {
		position: absolute;
		bottom: 0;
		height: 20px;
		width: 100%;
		display: table;
	}

	&-prompt {
		display: table-cell;
		width: 1px;
	}

	&-command {
		background: none;
		border: 0;
		color: white;
		outline: none;
		font: 16px monospace;
		padding-left: 9px;
		width: 100%;
		box-sizing: border-box;
		display: table-cell;
	}

	&-loader {
		position: absolute;
		bottom: 0;
		height: 20px;
	}

	.hide_element {
		display: none;
	}
}

